Updating the Documentation

--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ num_arms = 4
 pitch_angle_degrees = 25.0
 min_distance = 0.1
 radius_limit = 100.0
-galaxy_type = elliptical
+galaxy_type = spiral
 
 ;  List of wormhole pairs, where each pair connects two stars by their indices.
 [wormholes]
