--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
       - id: check-toml
       - id: check-added-large-files
         args:
+          - --maxkb=5120  # 5MB limit
           - --enforce-all
       - id: check-yaml
         exclude: "helm/templates/"
